--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <header>Library</header>
+    <button id="new-book">NEW BOOK</button>
+    <h3>BOOKS:</h3>
+    <p id="book-display"></p>
 </body>
+<script src="index.js"></script>
 
 </html>
