Update index.js & index.html & index.css
Refactored the user required information
Removed The Hobbit example
Changed p element to a div to display books that have been added
Added a for loop so that a div is created for each book added
Added p element for title, author, pages and read yes/no
Added appendChild for the information to be added to a div

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+
     <meta charset="UTF-8">
     <title>Library</title>
 </head>
 
 <body>
     <header>Library</header>
-    <button id="new-book">NEW BOOK</button>
+    <button id="newBookBtn">NEW BOOK</button>
     <h3>BOOKS:</h3>
-    <p id="book-display"></p>
+    <div id="book-display"></div>
+    <script src="index.js"></script>
 </body>
-<script src="index.js"></script>
+
 
 </html>
