--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 <body>
     <header>Library</header>
-    <button id="newBookBtn">NEW BOOK</button>
+
+    <form id="newBookForm">
+        <label for="title">Title:</label>
+        <input type="text" id="title" required><br>
+        <label for="author">Author:</label>
+        <input type="text" id="author" required><br>
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" required><br>
+        <label for="read">Read:</label>
+        <input type="checkbox" id="read"><br>
+        <button type="submit" id="newBookBtn">Add Book</button>
+    </form>
+
     <div id="book-display"></div>
     <script src="index.js"></script>
 </body>
